--- a/index.html
+++ b/index.html
@@ -14,6 +14,27 @@
               <img src="./images/search.png" alt="">
             </button>
         </div>
+        <div class="weather">
+            <img src="./images/clearday.png" class="weather-icon">
+            <h1 class="temp">22°c</h1>
+            <h2 class="city">New York</h2>
+            <div class="details">
+                <div class="col">
+                    <img src="images/humidity_high.png" alt="">
+                    <div>
+                        <p class="humidity">50%</p>
+                        <p>Humidity</p>
+                    </div>
+                </div>
+                <div class="col"></div>
+                    <img src="images/humidity_low.png" alt="">
+                    <div>
+                        <p class="wind">15 km/hr</p>
+                        <p>Wind Speed</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
