--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="card">
         <div class="search">
             <input type="text" placeholder="enter city name" spellcheck="false">
-            <button>
-              <img src="./images/search.png" alt="">
+            <button id="btn">
+              <img src="./images/search.png">
             </button>
         </div>
         <div class="weather">
