--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
             <h2 class="city">New York</h2>
             <div class="details">
                 <div class="col">
-                    <img src="images/humidity_high.png" alt="">
+                    <img src="images/humidity.png" alt="">
                     <div>
                         <p class="humidity">50%</p>
                         <p>Humidity</p>
                     </div>
                 </div>
-                <div class="col"></div>
-                    <img src="images/humidity_low.png" alt="">
+                <div class="col">
+                    <img src="images/windy.png" id="windy">
                     <div>
                         <p class="wind">15 km/hr</p>
                         <p>Wind Speed</p>
