--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
               <img src="./images/search.png">
             </button>
         </div>
+        <div class="error">
+            <p>Invalid City name</p>
+        </div>
         <div class="weather">
-            <img src="./images/clearday.png" class="weather-icon">
+            <img src="./images/sun.png" class="weather-icon">
             <h1 class="temp">22°c</h1>
             <h2 class="city">New York</h2>
             <div class="details">
